--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "تطبيق-بطاقات-التوعية-المنزلقة",
+  "name": "islamic-story",
   "private": true,
   "version": "0.0.0",
   "type": "module",
